tests/sumo/errors/routes/stops/index_invalid/errors.sumo
Error: Invalid 'index' for stop on edge 'SC' in vehicle '0'.
